# rust-backend

./: .env  Cargo.toml  README.md
migrations/: 20250109060237_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
